# smartenergy.awattar

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.dev  README.md  configuration.dev.yaml  configuration.yaml  docker-compose.yml  hacs.json  mypy.ini  pylintrc  pyproject.toml  requirements.txt  setup.py  start-dev.sh  start-local.sh
.devcontainer/: configuration.yaml  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-ci.yml
custom_components/: __init__.py
custom_components/electricity_maps/: manifest.json
custom_components/green_energy/: __init__.py  const.py  manifest.json  sensor.py  state.py
custom_components/smartenergy_awattar/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  state.py  strings.json
docs/: dev.md
mock_api/: Dockerfile  forecast_de.json  server.py
tests/: conftest.py  test_config_flow.py
